--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,9 @@
 
 html,
 body {
-  background: white;
+  background: rgb(19, 19, 19);
   margin: 20px;
-  color: #3e4144;
+  color: #c9c9c9;
   -webkit-font-smoothing: antialiased;
 }
 
