--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,14 +4,11 @@
 <div class="row">
   <div class="col">
     <!-- asociar -->
-    <app-personaje [data]="personajes"></app-personaje>
+    <app-personaje></app-personaje>
   </div>
   <div class="col">
     <!-- [recibe]='envía' -->
     <!-- (envia) = recibe -->
-    <app-agregar
-      (OnNuevoPersonaje)="agregarNuevoPersonaje($event)"
-      [nuevo]="nuevo"
-    ></app-agregar>
+    <app-agregar [nuevo]="nuevo"></app-agregar>
   </div>
 </div>
