--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -14,6 +14,6 @@
   <dd>{{ nombreCapitalizado }}</dd>
 </dl>
 
-<button (click)="cambiarNombre()">Cambiar heroe</button>
+<button (click)="cambiarNombre()">Cambiar héroe</button>
 
 <button (click)="cambiarEdad()">Cambiar edad</button>
